--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dots_indicator : ^1.2.0
-  google_fonts: ^3.0.1
+  google_fonts: ^2.1.0
   onboarding: ^3.1.0
   smooth_page_indicator: ^1.0.0+2
+  auth_buttons: ^2.0.4
 
 dev_dependencies:
   flutter_test:
